# toffee-terraform-wrapper

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  testing-README.MD
.github/workflows/: test.yaml
example/: main.tf
example/vars/: dev.tfbackend  prod.tfbackend
examples/example1/: main.tf  output.tf  providers.tf  variables.tf
examples/example1/vars/: dev.tfbackend  dev.tfvars  prod.tfbackend  prod.tfvars
examples/example2/: main.tf  providers.tf  variables.tv
examples/example2/vars/: dev.tfbackend  dev.tfvars  prod.tfbackend  prod.tfvars
tests/: conftest.py  test_cli.py  test_commands.py  test_core.py
toffee/: __init__.py  cli.py
toffee/commands/: __init__.py  base.py  config.py  env.py  info.py  terraform.py
toffee/core/: __init__.py  config.py  environment.py  terraform.py
