[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toffee"
version = "0.1.0"
description = "A modern CLI tool for deploying Terraform across multiple environments"
authors = [
    {name = "Akhilesh Mishra", email = "akhileshmishrabiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.7.0",
    "rich>=12.0.0"
]

[project.scripts]
toffee = "toffee.cli:app"